# roolz

./: .gitignore  Cargo.toml
build_model/: Cargo.toml
build_model/src/: lib.rs
build_routes/: Cargo.toml
build_routes/src/: lib.rs
build_server/: Cargo.toml
build_server/src/: lib.rs
build_table_model/: Cargo.toml
build_table_model/src/: lib.rs
register_errors/: Cargo.toml
register_errors/src/: lib.rs
src/: lib.rs
src/controller/: mod.rs
src/db/: mod.rs
src/error/: mod.rs
src/model/: mod.rs
src/model/resource_model/: mod.rs
src/model/table_model/: mod.rs
src/resource_model/: mod.rs
src/route/: mod.rs
src/routes/: mod.rs
src/server/: mod.rs
src/table_model/: mod.rs
src/view/: mod.rs
