[package]
name = "roolz"
version = "0.1.0"
authors = ["Taylor Leighton Roozen <tayleighroo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    #internal proc macros
    build_routes = { path = "build_routes" }
    build_table_model = { path = "build_table_model" }
    register_errors = { path = "register_errors" }

	# framework
    actix-web = "1.0.5"
    # CORS config
    actix-cors = "0.1.0"

    # db ORM
    diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"] }

    lazy_static = "1.4.0"

    # logging
    log = "0.4.8"
    env_logger = "0.7.1"

    # serialization of data
    serde = "1.0"
    serde_derive = "1.0"
    serde_json = "1.0"

    # environment config
    dotenv = "0.9.0"

    listenfd = "0.3"

    # resource calls
    reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }

    yaml-rust = "0.4.5"