[package]
name = "roolz"
version = "0.1.0"
authors = ["Taylor Leighton Roozen <tayleighroo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

    build_routes = { path = "build_routes" }
    register_errors = { path = "register_errors" }

	# framework
    actix-web = "4.2.1"

    lazy_static = "1.4.0"

    # logging
    log = "0.4.8"
    env_logger = "0.7.1"

    # serialization of data
    serde = {version = "1.0", features = ["derive"]}
    serde_json = "1.0"

    # environment config
    dotenv = "0.9.0"

    listenfd = "0.3"

    # resource calls
    reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }

    # db ORM
    diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json"], optional = true }
    build_table_model = { path = "build_table_model", optional = true }

[features]

    database = ["diesel", 'build_table_model']
