[package]
name = "build_server"
version = "0.1.0"
authors = ["Taylor Leighton Roozen <tayleighroo@gmail.com>"]
edition = "2018"

[lib]
    proc-macro = true

[dependencies]
    quote = "1.0.7"
    syn = { version= "1.0.53", features = ["full"] }
    proc-macro2 = "1.0.24"

    # CORS config
    actix-cors = "0.1.0"
    # framework
    actix-web = "1.0.5"